--- a/DeciderApp/Base.lproj/Main.storyboard
+++ b/DeciderApp/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TNr-fd-RRh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9059" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="TNr-fd-RRh">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9049"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -280,6 +280,9 @@
                                         <rect key="frame" x="0.0" y="318" width="560" height="30"/>
                                         <animations/>
                                         <state key="normal" title="Add Places"/>
+                                        <connections>
+                                            <segue destination="AhC-cG-7xG" kind="show" identifier="searchAPISegue" id="Qvh-JN-BCk"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                                 <animations/>
@@ -326,6 +329,126 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qRw-ZI-pbc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3306" y="169"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="xME-Ww-H6m">
+            <objects>
+                <viewController id="AhC-cG-7xG" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="BLJ-EF-ZZN"/>
+                        <viewControllerLayoutGuide type="bottom" id="Jlw-XL-gEX"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="NHL-MC-jIW">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="110" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Gj0-kT-Yph">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <animations/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <searchBar key="tableHeaderView" contentMode="redraw" id="M9c-DI-G8x">
+                                    <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                    <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                    <animations/>
+                                    <textInputTraits key="textInputTraits"/>
+                                </searchBar>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="SearchCell" rowHeight="110" id="0rW-Dh-i0W">
+                                        <rect key="frame" x="0.0" y="136" width="600" height="110"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="0rW-Dh-i0W" id="WpA-ks-wfI">
+                                            <rect key="frame" x="0.0" y="0.0" width="600" height="109.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4vJ-tj-rFh">
+                                                    <rect key="frame" x="492" y="5" width="100" height="100"/>
+                                                    <animations/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="100" id="Tbv-BI-TCa"/>
+                                                        <constraint firstAttribute="width" constant="100" id="hsX-mU-eb0"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="qJJ-c7-2oi">
+                                                    <rect key="frame" x="18" y="18" width="106" height="97"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1. Mcdonald's" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tHO-r3-udm">
+                                                            <rect key="frame" x="0.0" y="0.0" width="106" height="20"/>
+                                                            <animations/>
+                                                            <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Distance" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kLx-Oj-mOq">
+                                                            <rect key="frame" x="0.0" y="30" width="50" height="15"/>
+                                                            <animations/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <color key="textColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7t7-bc-38J">
+                                                            <rect key="frame" x="0.0" y="54" width="57" height="18"/>
+                                                            <animations/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="466 reviews" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nRa-ht-FLS">
+                                                            <rect key="frame" x="0.0" y="82" width="70" height="15"/>
+                                                            <animations/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                                            <color key="textColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <animations/>
+                                                </stackView>
+                                                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8Mh-iq-Ybf" customClass="Checkbox" customModule="DeciderApp" customModuleProvider="target">
+                                                    <rect key="frame" x="492" y="5" width="100" height="100"/>
+                                                    <animations/>
+                                                    <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
+                                                    <userDefinedRuntimeAttributes>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                            <real key="value" value="2"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="number" keyPath="checkWidth">
+                                                            <real key="value" value="2"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                        <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                                            <color key="value" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                                        </userDefinedRuntimeAttribute>
+                                                    </userDefinedRuntimeAttributes>
+                                                </view>
+                                            </subviews>
+                                            <animations/>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="4vJ-tj-rFh" secondAttribute="trailing" constant="10" id="2E9-ng-aP7"/>
+                                                <constraint firstItem="qJJ-c7-2oi" firstAttribute="top" secondItem="WpA-ks-wfI" secondAttribute="topMargin" constant="10" id="JOZ-TU-nZ8"/>
+                                                <constraint firstItem="4vJ-tj-rFh" firstAttribute="top" secondItem="WpA-ks-wfI" secondAttribute="top" constant="10" id="LK5-YY-hc9"/>
+                                                <constraint firstItem="qJJ-c7-2oi" firstAttribute="leading" secondItem="WpA-ks-wfI" secondAttribute="leadingMargin" constant="10" id="Lc8-dd-Q5J"/>
+                                                <constraint firstItem="8Mh-iq-Ybf" firstAttribute="width" secondItem="4vJ-tj-rFh" secondAttribute="width" id="NoR-gN-fBF"/>
+                                                <constraint firstAttribute="trailing" secondItem="8Mh-iq-Ybf" secondAttribute="trailing" constant="10" id="ikv-7g-PtH"/>
+                                                <constraint firstItem="8Mh-iq-Ybf" firstAttribute="top" secondItem="WpA-ks-wfI" secondAttribute="top" constant="10" id="sAR-LG-UXn"/>
+                                                <constraint firstItem="8Mh-iq-Ybf" firstAttribute="height" secondItem="4vJ-tj-rFh" secondAttribute="height" id="sQM-IG-31R"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <animations/>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
+                        <animations/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="Gj0-kT-Yph" firstAttribute="centerY" secondItem="NHL-MC-jIW" secondAttribute="centerY" id="952-Gu-Twc"/>
+                            <constraint firstItem="Gj0-kT-Yph" firstAttribute="height" secondItem="NHL-MC-jIW" secondAttribute="height" id="TOG-mI-MIT"/>
+                            <constraint firstItem="Gj0-kT-Yph" firstAttribute="width" secondItem="NHL-MC-jIW" secondAttribute="width" id="a3S-pr-VCT"/>
+                            <constraint firstItem="Gj0-kT-Yph" firstAttribute="centerX" secondItem="NHL-MC-jIW" secondAttribute="centerX" id="zeo-GK-Csp"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="zig-p9-Jl2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3971" y="164"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="Ved-MH-Rp6">
